# multi-agent-bug-triage

./: .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
app/agents/: bisection.py  fix.py  localize.py  protocols.py  regression.py  reproduction.py  sbfl.py  triage.py  types.py  validation.py
app/config/: default.yaml  settings.py
app/db/: models.py  store.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial_schema.py
app/eval/: metrics.py  multiswebench.py  runner.py  swebench.py
app/orchestrator/: api.py  composition.py  confidence.py  dag.py  escalation.py  main.py  store.py
app/providers/: base.py  client.py  factory.py  ollama.py
app/sandbox/: config.py  gvisor.py  interface.py  profiles.py
app/vcs/: publisher.py
docs/: spec.md
tests/eval/: test_ollama_live.py
tests/integration/: test_bisection_acceptance.py  test_db_store.py  test_sandbox_escape.py
tests/unit/: test_api.py  test_bisect_run.py  test_bisection_stub.py  test_confidence.py  test_config.py  test_db_models.py  test_eval_metrics.py  test_eval_runner.py  test_git_bisection_agent.py  test_gvisor_sandbox.py  test_java_execution_profile.py  test_llm_fix_agent.py  test_llm_localize_agent.py  test_llm_repro_synth.py  test_llm_reviewer.py  test_localize_agent.py  test_multiswebench.py  test_ollama_provider.py  test_orchestrator_dag.py  test_profiles.py  test_provider_factory.py  test_regression_gate.py  test_reproduction_agent.py  test_revert_fix_agent.py  test_sandbox_config.py  test_sbfl.py  test_triage_agent.py  test_validation_agent.py
