[project]
name = "bug-triage-agent"
version = "0.1.0"
description = "Automated multi-agent bug triage, reproduction, and repair system with a safe autonomous triage-to-patch loop."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "httpx>=0.27",
    "docker>=7.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-randomly>=3.15",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]
extend-exclude = ["app/db/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4", "PTH", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]
mypy_path = "."
exclude = ["app/db/migrations/"]

[[tool.mypy.overrides]]
module = ["docker.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "unit: fast tests with mocked providers and no Docker (default fast loop)",
    "integration: tests requiring real Docker under the runsc runtime",
    "eval: SWE-bench / Multi-SWE-bench eval tier, excluded from the default run",
]
addopts = "-m 'not integration and not eval' --strict-markers"
